--- a/modelling/Project.toml
+++ b/modelling/Project.toml
@@ -5,5 +5,5 @@ Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LibGit2 = "76f85450-5226-5b5a-8eaa-529ad045b433"
 Mimi = "e4e893b0-ee5e-52ea-8111-44b3bdec128c"
-MimiDICE2016R2 = "f1883be1-2b67-40c7-aa52-23bf8bdba39c"
+OptMimiDICE2016R2 = "f1883be1-2b67-40c7-aa52-23bf8bdba39c"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
